fix(chat): add timestamp to messages and fix getMailbox method of ChatManager